overflow fix

--- a/core/src/main/resources/static/css/main.css
+++ b/core/src/main/resources/static/css/main.css
@@ -247,6 +247,7 @@ button.accent {
     justify-content: space-between;
     overflow: hidden;
     border-radius: 10px;
+    flex-shrink: 0;
 }
 
 
@@ -283,6 +284,9 @@ button.accent {
     overflow-x: hidden;
     padding-right: 20px;
     max-width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .message-content {
